@@ -1,0 +1,59 @@
+/**
+ * Licensed to the Apache Software Foundation (ASF) under one
+ * or more contributor license agreements.  See the NOTICE file
+ * distributed with this work for additional information
+ * regarding copyright ownership.  The ASF licenses this file
+ * to you under the Apache License, Version 2.0 (the
+ * "License"); you may not use this file except in compliance
+ * with the License.  You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+package org.apache.avro.reflect;
+
+import java.io.File;
+import java.net.URL;
+import java.net.URLClassLoader;
+import java.util.List;
+
+import org.apache.avro.tool.Tool;
+
+/**
+ * Utility to induce the schema of a given class using
+ * reflection.
+ */
+public class InduceSchemaTool implements Tool {
+
+  @Override
+  public void run(List<String> args) throws Exception {
+    if (args.size() == 0 || args.size() > 2) {
+      System.err.println("Usage: [colon-delimited-classpath] classname");
+      return;
+    }
+    ClassLoader classLoader = Thread.currentThread().getContextClassLoader();
+    String className;
+    if (args.size() == 2) {
+      String classpaths = args.get(0);
+      className = args.get(1);
+      if (!classpaths.isEmpty()) {
+        String[] paths = args.get(0).split(":");
+        URL[] urls = new URL[paths.length];
+        for (int i = 0; i < paths.length; ++i) {
+          urls[i] = new File(paths[i]).toURI().toURL();
+        }
+        classLoader = URLClassLoader.newInstance(urls, classLoader);
+      }
+    } else {
+      className = args.get(0);
+    }
+
+    Class<?> klass = classLoader.loadClass(className);
+    System.out.println(ReflectData.get().getSchema(klass).toString());
+  }
+}
